Adjust core module code with Java 11 + update font managing