@@ -7,6 +7,7 @@ import com.fasterxml.jackson.annotation.JsonSetter;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @JsonInclude(JsonInclude.Include.NON_DEFAULT)
 public class Note extends NoteRestElement {
@@ -93,6 +94,6 @@ public class Note extends NoteRestElement {
     }
 
     public List<Lyric> getLyrics() {
-        return lyrics.values().stream().toList();
+        return lyrics.values().stream().collect(Collectors.toList());
     }
 }
